# fitness-solutions-server

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023-04-30_add_admins.py  2023-04-30_add_initial_admin_user.py  2023-05-05_add_fitness_coaches.py  2023-05-06_add_country_to_users.py  2023-05-06_seed_countries.py  2023-05-08_add_image_to_fitness_coach.py  2023-05-08_add_images.py  2023-05-16_add_equipment.py  2023-05-21_equipment_translations.py  2023-05-26_add_muscle_groups.py  2023-06-01_add_exercises.py  2023-06-03_add_body_part.py  2023-06-20_add_orders_and_workouts.py  2023-06-23_update_workouts.py  2023-06-27_saved_workouts.py  2023-07-03_workout_sex_and_focus.py  2023-07-07_workout_age.py  2023-07-12_completed_workouts.py  2023-07-16_delete_users_and_fitness_coach.py  2023-07-19_rename_break_field.py  2023-07-19_weight_logs.py  2023-07-20_fitness_plans.py  2023-07-25_delete_weight_field.py  2023-07-25_delete_workout_exercises.py  2023-07-25_fitness_plan_weeks.py  2023-07-31_user_workouts.py  2023-08-11_saved_fitness_plans.py  2023-08-21_pr_observations.py  2023-08-23_collections.py  2023-08-29_currency_and_products.py  2023-09-01_fitness_coach_is_released.py  2023-09-04_product_discount_price_and_brand.py  5083670d17ff_install_citext.py  7aca75782d4b_adding_user_token_model.py  dbb75d162207_adding_user_model.py
fitness_solutions_server/: main.py
fitness_solutions_server/admins/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
fitness_solutions_server/core/: config.py  (+10 more)
(+83 files in other folders)
